# xas-batch

./: .env.example  .gitignore  DESIGN.md  LICENSE  PROCESSING.md  README.md  STANDALONE_REPO_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: run_one_file.py
src/xasbatch/: __init__.py  catalog.py  cli.py  io.py  model.py  plotcli.py  plotlyplots.py  plotting.py  process.py  tree.py  viewcli.py  viewer_app.py
tests/: test_io.py  test_plotlyplots.py  test_plotting.py  test_process.py  test_tree.py  test_viewer_app.py
tests/data/: sample_small.bcr.combined
