[project]
name = "xas-batch"
version = "0.1.0"
description = "Batch normalization + EXAFS extraction for combined-BCR fluorescence XAS files, via Larch."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Samantha Tetef" }]
requires-python = ">=3.11"
dependencies = ["xraylarch", "tqdm", "python-dotenv"]

[project.scripts]
xas-batch = "xasbatch.cli:main"
xas-batch-tree = "xasbatch.tree:main"

[project.optional-dependencies]
plot = ["matplotlib"]

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xasbatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
